syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Payment.Options";

package edoxa.services.payment;

message PaymentApiOptions {
  StaticOptions static = 1;
  DefaultOptions default = 2;

  message DefaultOptions {
    StripeOptions stripe = 1;

    message StripeOptions {
      InvoiceOptions invoice = 1;
      TransferOptions transfer = 2;

      message InvoiceOptions {
        string currency = 1;
        repeated string taxRates = 2;
      }

      message TransferOptions {
        string currency = 1;
      }
    }
  }
  
  message StaticOptions {
    StripeOptions stripe = 1;

    message StripeOptions {
      CurrenciesOptions currencies = 1;
      PaymentMethodOptions paymentMethod = 2;

      message CurrenciesOptions {
        repeated string CA = 1;
        repeated string US = 2;
	  }

      message PaymentMethodOptions {
        CardOptions card = 1;

        message CardOptions {
          int32 limit = 1;
        }
      }
    }
  }
}